added favorites feature, and persistence layer is now working

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,9 +22,9 @@
             </form>
           </li>
           <li>
-            <form class="navbar-form navbar-left" role="search">
+            <form class="navbar-form navbar-left" role="search" action='/favorites/' method='get'>
               <div class="form-group">
-                <button type="submit" class="btn btn-warning" action='/favorites' method='get'>See Favorited Movies</button>
+                <button type="submit" class="btn btn-warning" >See Favorited Movies</button>
               </div>
             </form>
           </li>
