--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar navbar-fixed-top navbar-inverse">
         <ul class="nav navbar-nav">
-          <li id="brand">Movie Finder</li>
+          <li id="brand"><a href="/">Movie Finder</a></li>
           <li>
             <form class="navbar-form navbar-left" role="search">
               <div class="form-group">
