--- a/public/styles.css
+++ b/public/styles.css
@@ -17,10 +17,17 @@
 }
 .movie_content{
   height:350px;
-  border: 1px solid black;
   padding: 10px;
   border-radius: 5px;
 }
 .info_bits {
   font-size: 14px;
+}
+.favorite_form {
+  margin-top: 20px;
+}
+.return_result{
+  border: 2px solid black;
+  margin: 20px;
+  border-radius: 5px;
 }
