--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,7 @@
 <div class="container-fluid" id="place_holder">
   <div class="row" >
-    <h2 >Enter a movie title above for searching...</2>
+    <div class="col-md-6 col-md-offset-2">
+      <h2>Enter a movie title above for searching...</2>
+    </div>
   </div>
 </div>
