--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,7 +16,7 @@
           <li>
             <form class="navbar-form navbar-left" role="search">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search" autofocus=true id="query">
+                <input type="text" class="form-control" placeholder="Enter Movie Title" autofocus=true id="query">
               </div>
               <button type="submit" class="btn btn-primary" id="submit_query" >Search</button>
             </form>
